<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.home.DetailFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/itemRow"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:strokeColor="@android:color/transparent"
            app:strokeWidth="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:id="@+id/backdropView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_placeholder_movie"
                    tools:srcCompat="@tools:sample/avatars[0]" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="49dp"
                    android:background="@drawable/bottom_gradient" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/posterViewLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <ImageView
                        android:id="@+id/posterView"
                        android:layout_width="100dp"
                        android:layout_height="135dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_placeholder_movie"
                        tools:srcCompat="@tools:sample/avatars[2]" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/ratingBar"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@id/posterViewLayout"
                    android:fontFamily="@font/medium"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Title" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@id/posterViewLayout"
                    android:isIndicator="true"
                    android:numStars="1"
                    android:rating="1"
                    android:stepSize="0.1" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTitle"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@id/ratingBar"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    tools:text="1.0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textTitle"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@id/vote"
                    android:textSize="13sp"
                    tools:text="2023" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/book"
            android:text="@string/genre"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:singleLine="true"/>
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/overview"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/overview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/release_date"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/releaseDateFull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            tools:text="@string/overview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/popularity"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            tools:text="@string/overview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/trailers_videos"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <HorizontalScrollView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/videos"
                android:paddingStart="16dp"
                android:paddingEnd="26dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/cast"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <HorizontalScrollView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/cast"
                android:paddingStart="16dp"
                android:paddingEnd="26dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/production"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <HorizontalScrollView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/production"
                android:paddingStart="16dp"
                android:paddingEnd="26dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </HorizontalScrollView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/book"
            android:text="@string/reviews"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reviews"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:drawableLeft="@drawable/baseline_rate_review_24"
            android:drawableTint="@color/md_theme_inversePrimary"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="26dp"
            android:text="@string/read_all_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>