<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home.HomeFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/carouselNowPlaying"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="horizontal"/>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                app:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.chip.Chip
                    android:layout_marginStart="16dp"
                    app:chipBackgroundColor="@color/white_200"
                    android:id="@+id/chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                style="@style/MaterialAlertDialog.Material3.Title.Text"
                android:text="@string/popular"
                android:textSize="18sp"
                android:fontFamily="@font/bold"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/seeAllPopular"
                android:text="@string/see_all"
                android:fontFamily="@font/book"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/see_all"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_grid"/>

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                style="@style/MaterialAlertDialog.Material3.Title.Text"
                android:text="@string/top_rated"
                android:textSize="18sp"
                android:fontFamily="@font/bold"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/seeAllTopRated"
                android:text="@string/see_all"
                android:fontFamily="@font/book"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/see_all"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTopRated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_grid"/>

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textview.MaterialTextView
                style="@style/MaterialAlertDialog.Material3.Title.Text"
                android:text="@string/upcoming"
                android:textSize="18sp"
                android:fontFamily="@font/bold"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/seeAllUpcoming"
                android:text="@string/see_all"
                android:fontFamily="@font/book"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/see_all"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUpcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/item_grid"/>

    </LinearLayout>

</ScrollView>